--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 
 video game recommendation with explicit rating/Game-Recommendation-System/
+video game recommendation with explicit rating/venv/Lib/site-packages/__pycache__/autopep8.cpython-39.pyc
